; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pci/extr_g92.c_g92_pcie_version_supported.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pci/extr_g92.c_g92_pcie_version_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_pci = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @g92_pcie_version_supported(%struct.nvkm_pci* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nvkm_pci*, align 8
  store %struct.nvkm_pci* %0, %struct.nvkm_pci** %3, align 8
  %4 = load %struct.nvkm_pci*, %struct.nvkm_pci** %3, align 8
  %5 = call i32 @nvkm_pci_rd32(%struct.nvkm_pci* %4, i32 1120)
  %6 = and i32 %5, 512
  %7 = icmp eq i32 %6, 512
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 2, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i32 @nvkm_pci_rd32(%struct.nvkm_pci*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
